# erc8004-substreams

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  schema.clickhouse.sql  schema.sql  substreams.clickhouse.yaml  substreams.yaml
abi/: identity_registry.json  reputation_registry.json
proto/: erc8004.proto
src/: lib.rs
src/abi/: mod.rs
